# tusic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
export/: preview.cast
src/: app.rs  cli.rs  config.rs  download.rs  main.rs  model.rs  msg.rs  playlist.rs  task.rs  update.rs  watcher.rs
src/audio/: decoder.rs  mod.rs  rodio.rs
src/audio/backend/: mod.rs  rodio.rs  symphonia.rs
src/ui/: app.rs  help.rs  layout.rs  logs.rs  mod.rs  player.rs  playlist.rs  search.rs
src/youtube/: mod.rs
